# cardinal-sdk

./: .gitignore  CLAUDE.md  DOCUMENTATION.md  LICENSE  README.md  build.gradle.kts
.github/workflows/: generate_typescript.yml  license-report.yaml  main_pr_protection  trigger-ci.yml
buildSrc/: build.gradle.kts
cardinal-mcp-server/: .yarnrc.yml  CLAUDE.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
cardinal-mcp-server/scripts/: extract-docs.ts  generate-registry.ts
cardinal-mcp-server/src/: index.ts  server.ts
cardinal-mcp-server/src/helpers/: docs-loader.ts  filter-builder.ts  model-builder.ts  pagination.ts  serialization.ts
cardinal-mcp-server/src/resources/: api-docs.ts  filter-docs.ts  guide-docs.ts  model-docs.ts  overview.ts  search.ts  tutorial-docs.ts
cardinal-mcp-server/src/tools/: admin-tools.ts  crypto-tools.ts  data-owner-tools.ts  dispatch.ts  init.ts  sdk-state.ts
cardinal-mcp-server/test/: protocol.test.ts  resources-docs.test.ts  search.test.ts  twofa-identifiers.test.ts
cardinal-mcp-server/test/helpers/: harness.ts
cardinal-sdk/: build.gradle.kts
dart-wrapper/cardinal_sdk/: pubspec.yaml
dart-wrapper/cardinal_sdk/ios/: cardinal_sdk.podspec
dart-wrapper/cardinal_sdk/lib/: cardinal_sdk.dart
dart-wrapper/lib/: build.gradle.kts
gradle/: libs.versions.toml
python-wrapper/: build.gradle.kts
python-wrapper/src/commonMain/resources/: pyproject.toml
python-wrapper/src/python/: CardinalSdk.py  kotlin_dll_loader.py  kotlin_types.py
ts-wrapper/: build.gradle.kts  tsconfig.json
(+1725 files in other folders)
