[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cardinal-sdk"
version = "2.4.4"
requires-python = ">=3.12"
authors = [
    { name = "iCure" }
]
# TODO: add readme
license = {text = "MIT License"}
keywords = ["cardinal", "medical data", "encryption"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://cardinalsdk.com/en/"
Documentation = "https://docs.icure.com/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
'*' = ["*.so", "*.dylib", "*.dll", "libcurl.so.4.8.0"]